[gd_scene load_steps=7 format=3 uid="uid://cxeqijfw6weed"]

[ext_resource type="PackedScene" uid="uid://ckpqvkrwv17gb" path="res://Scenes/cashier/cashier.tscn" id="1_d1f46"]
[ext_resource type="Script" uid="uid://bm0fsh6wvh5ap" path="res://Scenes/customer/customer.gd" id="2_hytsm"]
[ext_resource type="Texture2D" uid="uid://bjku6lm3q34gt" path="res://Idle Tycoon Assets/Sprites/UI/circle.png" id="3_0avmb"]
[ext_resource type="Texture2D" uid="uid://cjacmgi2eu6yq" path="res://Idle Tycoon Assets/Sprites/UI/Coffee.png" id="4_o0vpx"]
[ext_resource type="FontFile" uid="uid://due6jbyye53ld" path="res://Idle Tycoon Assets/Fonts/font_score.ttf" id="5_cjqpr"]

[sub_resource type="LabelSettings" id="LabelSettings_buuxh"]
font = ExtResource("5_cjqpr")
font_size = 35
font_color = Color(0, 0, 0, 1)

[node name="Customer" instance=ExtResource("1_d1f46")]
script = ExtResource("2_hytsm")

[node name="Body" parent="Visuals" index="1"]
unique_name_in_owner = true

[node name="Face" parent="Visuals" index="2"]
unique_name_in_owner = true

[node name="HandLeft" parent="Visuals" index="3"]
unique_name_in_owner = true

[node name="HandRight" parent="Visuals" index="4"]
unique_name_in_owner = true

[node name="ItemBox" type="Control" parent="." index="2"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -146.0
offset_top = -137.0
offset_right = -46.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ItemBox" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0avmb")
expand_mode = 1
stretch_mode = 5

[node name="ItemIMG" type="TextureRect" parent="ItemBox/TextureRect" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 65)
layout_mode = 0
offset_left = 3.0
offset_top = 17.0
offset_right = 68.0
offset_bottom = 82.0
texture = ExtResource("4_o0vpx")
expand_mode = 1
stretch_mode = 5

[node name="ItemLabel" type="Label" parent="ItemBox/TextureRect" index="1"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 52.0
offset_top = 38.0
offset_right = 92.0
offset_bottom = 87.0
text = "3"
label_settings = SubResource("LabelSettings_buuxh")
horizontal_alignment = 1
vertical_alignment = 1
